# MailAssist

./: README.md  Readme.MD  pyproject.toml
mailassist/: __init__.py  attachment_processor.py  cli.py  config.py  email_sender.py  imap_client.py  llm_client.py  processor.py  state.py
tests/: test_attachment_processor.py  test_llm_client.py  test_processor_flow.py
